--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^13.4.12",
     "autoprefixer": "10.4.14",
+    "canvas-confetti": "^1.6.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
